Added in-app support for opening the documentation

--- a/build_resources/DEV_osc.toml.in
+++ b/build_resources/DEV_osc.toml.in
@@ -12,6 +12,7 @@
 # INSTALL configuration file.
 
 resources = "@CMAKE_CURRENT_SOURCE_DIR@/resources"
+docs = "@CMAKE_CURRENT_SOURCE_DIR@/docs/build/html"
 
 [experimental_feature_flags]
 
