Changed upload source for docs

--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -45,7 +45,7 @@ jobs:
     - uses: actions/upload-artifact@v2
       with:
         name: osc_docs
-        path: osc/osc-build/docs
+        path: osc/docs/build
         if-no-files-found: error
 
   macCatalina:
