--- a/.github/workflows/continuous-integration-workflow.yml
+++ b/.github/workflows/continuous-integration-workflow.yml
@@ -11,6 +11,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: osc
+        submodules: 'recursive'
     - name: run build_windows.bat
       run: |
         cd $env:GITHUB_WORKSPACE\osc
@@ -33,6 +34,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         path: osc
+        submodules: 'recursive'
     - name: run build script
       run: |
         cd $GITHUB_WORKSPACE/osc
@@ -53,6 +55,8 @@ jobs:
     runs-on: macos-10.15
     steps:
     - uses: actions/checkout@v2
+      with:
+        submodules: 'recursive'
     - name: run build script
       run: |
         cd $GITHUB_WORKSPACE
