Added default config that includes mesh importer

--- a/resources/imgui_base_config.ini
+++ b/resources/imgui_base_config.ini
@@ -1,6 +1,6 @@
 [Window][DockSpaceViewport_11111111]
 Pos=0,19
-Size=1156,907
+Size=1920,1118
 Collapsed=0
 
 [Window][Debug##Default]
@@ -9,7 +9,7 @@ Size=400,400
 Collapsed=0
 
 [Window][Splash screen]
-Pos=579,318
+Pos=610,318
 Size=700,500
 Collapsed=0
 
@@ -26,7 +26,7 @@ DockId=0x00000004,0
 
 [Window][Hierarchy]
 Pos=0,19
-Size=292,486
+Size=353,599
 Collapsed=0
 DockId=0x00000003,1
 
@@ -90,8 +90,8 @@ Collapsed=0
 DockId=0x00000004,1
 
 [Window][Edit Props]
-Pos=0,507
-Size=292,419
+Pos=0,620
+Size=353,517
 Collapsed=0
 DockId=0x0000000B,1
 
@@ -102,8 +102,8 @@ Collapsed=0
 DockId=0x0000000B,1
 
 [Window][Actions]
-Pos=294,723
-Size=862,25
+Pos=355,888
+Size=1565,30
 Collapsed=0
 DockId=0x00000008,0
 
@@ -214,14 +214,14 @@ Size=512,375
 Collapsed=0
 
 [Window][viewer0]
-Pos=294,19
-Size=862,702
+Pos=355,19
+Size=1565,867
 Collapsed=0
 DockId=0x00000004
 
 [Window][Log]
-Pos=294,750
-Size=862,176
+Pos=355,920
+Size=1565,217
 Collapsed=0
 DockId=0x0000000A,1
 
@@ -266,7 +266,7 @@ Size=512,52
 Collapsed=0
 
 [Window][select experiment]
-Pos=610,350
+Pos=610,318
 Size=700,500
 Collapsed=0
 
@@ -282,46 +282,60 @@ Collapsed=0
 DockId=0x00000013
 
 [Window][logowindow]
-Pos=865,165
+Pos=896,165
 Size=144,144
 Collapsed=0
 
 [Window][##tudlogo]
-Pos=776,843
+Pos=807,843
 Size=144,144
 Collapsed=0
 
 [Window][##czilogo]
-Pos=954,843
+Pos=985,843
 Size=144,144
 Collapsed=0
 
 [Window][Coordinate Editor]
 Pos=0,19
-Size=292,486
+Size=353,599
 Collapsed=0
 DockId=0x00000003,0
 
+[Window][hierarchy]
+Pos=0,19
+Size=322,1118
+Collapsed=0
+DockId=0x00000015,0
+
+[Window][wizard_3dViewer]
+Pos=324,19
+Size=1596,1118
+Collapsed=0
+DockId=0x00000004,0
+
 [Docking][Data]
-DockSpace                 ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1156,907 Split=X Selected=0x945C996A
-  DockNode                ID=0x00000013 Parent=0x8B93E3BD SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
-  DockNode                ID=0x00000014 Parent=0x8B93E3BD SizeRef=1552,1200 Split=X
-    DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
-      DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=292,1117 Split=Y Selected=0x788BAA0D
-        DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Selected=0x788BAA0D
-        DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 Selected=0x16244C15
-      DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=862,1117 Split=Y
-        DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
-          DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
-            DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=624,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
-            DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=615,916 Split=Y Selected=0x98DE1660
-              DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
-              DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
-                DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
-                DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
-          DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
-        DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
-    DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
-      DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0x1A64C361
-      DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
+DockSpace                   ID=0x8B93E3BD Window=0xA787BDB4 Pos=0,19 Size=1920,1118 Split=X Selected=0x945C996A
+  DockNode                  ID=0x00000015 Parent=0x8B93E3BD SizeRef=322,1118 Selected=0xFA7A28AE
+  DockNode                  ID=0x00000017 Parent=0x8B93E3BD SizeRef=1596,1118 Split=X
+    DockNode                ID=0x00000013 Parent=0x00000017 SizeRef=366,1200 HiddenTabBar=1 Selected=0x4E70EF18
+    DockNode                ID=0x00000014 Parent=0x00000017 SizeRef=1552,1200 Split=X
+      DockNode              ID=0x0000000E Parent=0x00000014 SizeRef=1546,1181 Split=X
+        DockNode            ID=0x00000001 Parent=0x0000000E SizeRef=353,1117 Split=Y Selected=0x788BAA0D
+          DockNode          ID=0x00000003 Parent=0x00000001 SizeRef=362,599 Selected=0x788BAA0D
+          DockNode          ID=0x0000000B Parent=0x00000001 SizeRef=362,517 HiddenTabBar=1 Selected=0x16244C15
+        DockNode            ID=0x00000002 Parent=0x0000000E SizeRef=1565,1117 Split=Y
+          DockNode          ID=0x00000009 Parent=0x00000002 SizeRef=1066,950 Split=Y Selected=0x945C996A
+            DockNode        ID=0x00000007 Parent=0x00000009 SizeRef=1157,916 Split=X Selected=0xEFD926F6
+              DockNode      ID=0x00000004 Parent=0x00000007 SizeRef=624,916 CentralNode=1 HiddenTabBar=1 Selected=0xEFD926F6
+              DockNode      ID=0x00000005 Parent=0x00000007 SizeRef=615,916 Split=Y Selected=0x98DE1660
+                DockNode    ID=0x00000006 Parent=0x00000005 SizeRef=768,443 HiddenTabBar=1 Selected=0x98DE1660
+                DockNode    ID=0x0000000C Parent=0x00000005 SizeRef=768,471 Split=X Selected=0x01D747DA
+                  DockNode  ID=0x0000000D Parent=0x0000000C SizeRef=384,471 HiddenTabBar=1 Selected=0x01D747DA
+                  DockNode  ID=0x0000000F Parent=0x0000000C SizeRef=382,471 HiddenTabBar=1 Selected=0x76D0774C
+            DockNode        ID=0x00000008 Parent=0x00000009 SizeRef=1157,32 HiddenTabBar=1 Selected=0xCAF5C873
+          DockNode          ID=0x0000000A Parent=0x00000002 SizeRef=1066,229 HiddenTabBar=1 Selected=0xB7722E25
+      DockNode              ID=0x00000010 Parent=0x00000014 SizeRef=372,1181 Split=Y Selected=0x1A64C361
+        DockNode            ID=0x00000011 Parent=0x00000010 SizeRef=372,633 Selected=0x1A64C361
+        DockNode            ID=0x00000012 Parent=0x00000010 SizeRef=372,546 HiddenTabBar=1 Selected=0x5A8E322E
 
