Removed all mentions of the adamkewley repo

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -605,7 +605,7 @@ set(CPACK_PACKAGE_NAME "OpenSimCreator")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/LICENSE")
 set(CPACK_PACKAGE_VENDOR "Adam Kewley")
 set(CPACK_PACKAGE_CONTACT "Adam Kewley <contact@adamkewley.com>")
-set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/adamkewley/opensim-creator")
+set(CPACK_PACKAGE_HOMEPAGE_URL "https://github.com/ComputationalBiomechanicsLab/opensim-creator")
 set(CPACK_PACKAGE_DESCRIPTION "A standalone GUI for building OpenSim models")
 set(CPACK_PACKAGE_EXECUTABLES "osc;OpenSimCreator")
 
@@ -651,7 +651,7 @@ if (WIN32)
     set(CPACK_NSIS_MUI_ICON "${CMAKE_CURRENT_SOURCE_DIR}/resources/logo.ico")
     set(CPACK_NSIS_UNINSTALL_NAME "UninstallOpenSimCreator")
     set(CPACK_NSIS_ENABLE_UNINSTALL_BEFORE_INSTALL ON)
-    set(CPACK_NSIS_HELP_LINK "https://github.com/adamkewley/opensim-creator")
+    set(CPACK_NSIS_HELP_LINK ${CPACK_PACKAGE_HOMEPAGE_URL})
     set(CPACK_NSIS_CONTACT "contact@adamkewley.com")
     # do not prompt the user to modify the PATH
     set(CPACK_NSIS_MODIFY_PATH OFF)
