--- a/src/osc_config.hpp.in
+++ b/src/osc_config.hpp.in
@@ -53,4 +53,4 @@
 // the internet location of the OSC repo. Used by in-app links, shortcuts, etc.
 // to the repo so that users can just click and go, rather than having to separately
 // browse to the repo
-#define OSC_REPO_URL "https://github.com/adamkewley/osmv"
+#define OSC_REPO_URL "https://github.com/ComputationalBiomechanicsLab/opensim-creator"
